--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,21 @@
 /*      Menu 
 
-    1. Template CSS
-    2. Navbar
+    1. Layout
 
 */
 
 
 
-/********** Template CSS **********/
+/********** Layout **********/
 :root {
     --primary: #0d6efd;
     --secondary: #999999;
     --light: #F2F8FE;
     --dark: #111111;
+}
+
+ol, ul {
+    list-style: none;
 }
 
 .back-to-top {
@@ -23,7 +26,10 @@
     z-index: 99;
 }
 
-/*** Navbar ***/
+li > a{
+    text-decoration: none!important;
+}
+
 .navbar.sticky-top {
     top: -100px;
     transition: .5s;
@@ -39,14 +45,62 @@
     color: var(--dark);
     font-weight: 500;
     outline: none;
+    position: relative;
 }
 
-.navbar .navbar-nav .nav-link:hover,
-.navbar .navbar-nav .nav-link.active {
-    color: var(--primary);
-    border-bottom: 1px solid var(--primary);
-    transition: border-bottom 0.3s ease-in-out;
+.nav-hover:hover::after{
+    transform: scaleX(1);
 }
+
+.nav-hover::after,
+.navbar .navbar-nav .nav-link.active::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background: var(--primary);
+    bottom: 20px;
+    left: 0px;
+    transition: all 0.2s ease-in-out 0s;
+    transform: scaleX(0);
+}
+
+.navbar .navbar-nav .nav-link:hover ,
+.navbar .navbar-nav .nav-link.active,
+.navbar .navbar-nav .nav-link.active::after{
+    color: var(--primary);
+    transform: scaleX(1);
+}
+
+.user-menu .dropdown-menu .dropdown-item{
+    align-items: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+}
+
+.user-menu .dropdown-menu .dropdown-item{
+    display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.user-menu .dropdown-menu .dropdown-item {
+    padding: 10px 15px;
+    font-size: 14px;
+}
+
+.dropdown-menu{
+    border: 1px solid #eff2f7;
+    border-radius: 0.8rem;
+    transform-origin: left top 0;
+    background-color: #fff;
+    padding: 0;
+    box-shadow: 0 0 1.25rem rgba(31, 45, 61, 0.08);
+    overflow: hidden;
+    position: absolute;
+    inset: 0px 0px auto auto;
+    margin: 0px;
+  }
 
 .navbar .dropdown-toggle::after {
     border: none;
@@ -69,7 +123,7 @@
 }
 
 @media (min-width: 992px) {
-    .navbar .nav-item .dropdown-menu {
+    /* .navbar .nav-item .dropdown-menu {
         display: block;
         border: none;
         margin-top: 0;
@@ -84,10 +138,539 @@
         visibility: visible;
         transition: .5s;
         opacity: 1;
-    }
+    } */
 }
 
 .navbar .btn:hover {
     color: #FFFFFF !important;
     background: var(--primary) !important;
 }
+
+.user-menu.nav .dropdown-heads {
+    margin: 0 5px;
+  }
+  .user-menu.nav .dropdown-heads > a {
+    background-color: #F7F7FA;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    border-radius: 50px;
+    justify-content: center;
+    font-size: 20px;
+}
+
+.user-menu.nav .dropdown-heads > a:hover {
+background-color: #eeeeee;
+}
+
+.user-menu.nav .dropdown-heads > a i {
+color: #333;
+}
+
+.user-menu {
+    float: right;
+    margin: 0;
+    position: relative;
+    z-index: 99;
+    display: flex !important;
+    padding-right: 20px;
+    border: 0;
+  }
+  @media (max-width: 991.98px) {
+    .user-menu {
+      padding-right: 0;
+    }
+  }
+  .user-menu.nav > li > a {
+    color: #333;
+    font-size: 14px;
+    padding: 0 15px;
+    display: -webkit-flex;
+    align-items: center;
+  }
+  @media (max-width: 991.98px) {
+    .user-menu.nav > li > a {
+      height: 60px;
+    }
+  }
+
+.user-menu.nav > li > a .badge {
+    display: block;
+    font-size: 10px;
+    font-weight: bold;
+    background-color: var(--primary);
+    min-height: 7px;
+    min-width: 7px;
+    color: #fff;
+    position: absolute;
+    right: 11px;
+    top: 10px;
+    padding: 2px;
+}
+
+.flag-nav .dropdown-menu.notifications {
+    transform: translateY(49px) !important;
+}
+
+.user-menu .user-img img {
+    width: 32px;
+    border-radius: 50%;
+}
+
+.user-menu .dropdown-menu .dropdown-item:hover {
+    color: #fff;
+    text-decoration: none;
+    background-color: var(--primary)F;
+}
+
+.user-menu .dropdown-menu .dropdown-item img {
+    margin-right: 8px;
+    width: 20px;
+}
+
+.flag-nav .dropdown-menu.notifications {
+    transform: translateY(49px) !important;
+  }
+  
+.flag-nav .dropdown-menu {
+transform: translateY(59px) !important;
+}
+
+.topnav-dropdown-header {
+    border-bottom: 1px solid #eeeeee;
+    text-align: center;
+    font-size: 12px;
+    height: 32px;
+    line-height: 32px;
+    padding: 0 12px;
+  }
+  .topnav-dropdown-header .notification-title {
+    color: #333;
+    display: block;
+    float: left;
+    font-size: 14px;
+  }
+  .topnav-dropdown-header .clear-noti {
+    color: #fd625e;
+    float: right;
+    font-size: 11px;
+    text-transform: uppercase;
+  }
+  
+  .notifications .noti-content {
+    height: 290px;
+    width: 350px;
+    overflow-y: auto;
+    position: relative;
+  }
+  .notifications .notification-list li {
+    margin-top: 0;
+    border-bottom: 1px solid #f5f5f5;
+    font-size: 14px;
+  }
+  .notifications .notification-list li a {
+    display: block;
+    padding: 12px;
+    border-radius: 2px;
+  }
+  .notifications .notification-list li a:hover {
+    background-color: rgba(38, 17, 85, 0.05);
+  }
+  .notifications .notification-list li .noti-title {
+    color: #333;
+    font-weight: 500;
+  }
+  .notifications .notification-list li .noti-details {
+    color: #989c9e;
+    margin: 0;
+  }
+  .notifications .notification-list li p.noti-time {
+    margin: 0;
+  }
+  .notifications .notification-list li .notification-time {
+    font-size: 12px;
+    line-height: 1.35;
+    color: #9e9e9e;
+  }
+  .notifications .notification-list li .list-item {
+    border: 0;
+    padding: 0;
+    position: relative;
+  }
+  .notifications .notification-list li .list-item .list-left {
+    height: 48px;
+    position: absolute;
+    width: 48px;
+  }
+  .notifications .notification-list li .list-item .list-body {
+    padding: 0 0 0 50px;
+  }
+  .notifications .notification-list li .list-item .list-body .message-author {
+    color: #333;
+    float: left;
+    font-weight: 500;
+    width: 175px;
+    display: block;
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  .notifications .notification-list li .list-item .list-body .message-time {
+    color: #888888;
+    float: right;
+    font-size: 11px;
+  }
+  .notifications .notification-list li .list-item .list-body .message-content {
+    color: #333;
+    font-size: 13px;
+    display: block;
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
+  .topnav-dropdown-footer {
+    border-top: 1px solid #eeeeee;
+    font-size: 12px;
+    height: 32px;
+    line-height: 32px;
+    padding: 0 12px;
+  }
+  .topnav-dropdown-footer a {
+    display: block;
+    text-align: center;
+    color: #333;
+  }
+
+
+/* Avatar */
+
+.avatar {
+    background-color: transparent;
+    color: #fff;
+    display: inline-block;
+    font-weight: 500;
+    height: 34px;
+    line-height: 38px;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    vertical-align: middle;
+    width: 34px;
+    position: relative;
+    white-space: nowrap;
+    margin: 0 10px 0 0;
+    border-radius: 50%;
+  }
+  .avatar.avatar-xs {
+    width: 24px;
+    height: 24px;
+  }
+  .avatar > img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
+    border-radius: 50%;
+  }
+  .avatar .avatar-title {
+    width: 100%;
+    height: 100%;
+    background-color: #2DA7FF;
+    color: #fff;
+  }
+  .avatar.avatar-online::before {
+    width: 25%;
+    height: 25%;
+    border-radius: 50%;
+    content: "";
+    border: 2px solid #fff;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    background-color: #28C76F;
+  }
+  .avatar.avatar-offline::before {
+    width: 25%;
+    height: 25%;
+    border-radius: 50%;
+    content: "";
+    border: 2px solid #fff;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    background-color: #f62d51;
+  }
+  .avatar.avatar-away::before {
+    width: 25%;
+    height: 25%;
+    border-radius: 50%;
+    content: "";
+    border: 2px solid #fff;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    background-color: #FF9900;
+  }
+  .avatar .border {
+    border-width: 3px !important;
+  }
+  .avatar .rounded {
+    border-radius: 6px !important;
+  }
+  .avatar .avatar-title {
+    font-size: 18px;
+  }
+  .avatar .avatar-xs {
+    width: 1.65rem;
+    height: 1.65rem;
+  }
+  .avatar .avatar-xs .border {
+    border-width: 2px !important;
+  }
+  .avatar .avatar-xs .rounded {
+    border-radius: 4px !important;
+  }
+  .avatar .avatar-xs .avatar-title {
+    font-size: 12px;
+  }
+  .avatar .avatar-xs.avatar-away::before, .avatar .avatar-xs.avatar-offline::before, .avatar .avatar-xs.avatar-online::before {
+    border-width: 1px;
+  }
+
+.avatar-sm {
+    width: 27px;
+    height: 27px;
+    min-width: 27px;
+  }
+  .avatar-sm .border {
+    border-width: 3px !important;
+  }
+  .avatar-sm .rounded {
+    border-radius: 4px !important;
+  }
+  .avatar-sm .avatar-title {
+    font-size: 15px;
+  }
+  .avatar-sm.avatar-away::before, .avatar-sm.avatar-offline::before, .avatar-sm.avatar-online::before {
+    border-width: 2px;
+  }
+  
+  .avatar-lg {
+    width: 3.75rem;
+    height: 3.75rem;
+  }
+  .avatar-lg .border {
+    border-width: 3px !important;
+  }
+  .avatar-lg .rounded {
+    border-radius: 8px !important;
+  }
+  .avatar-lg .avatar-title {
+    font-size: 24px;
+  }
+  .avatar-lg.avatar-away::before, .avatar-lg.avatar-offline::before, .avatar-lg.avatar-online::before {
+    border-width: 3px;
+  }
+  
+  .avatar-xl {
+    width: 5rem;
+    height: 5rem;
+  }
+  .avatar-xl .border {
+    border-width: 4px !important;
+  }
+  .avatar-xl .rounded {
+    border-radius: 8px !important;
+  }
+  .avatar-xl .avatar-title {
+    font-size: 28px;
+  }
+  .avatar-xl.avatar-away::before, .avatar-xl.avatar-offline::before, .avatar-xl.avatar-online::before {
+    border-width: 4px;
+  }
+  
+  .avatar-xxl {
+    width: 5.125rem;
+    height: 5.125rem;
+  }
+  @media (min-width: 768px) {
+    .avatar-xxl {
+      width: 8rem;
+      height: 8rem;
+    }
+  }
+  .avatar-xxl .border {
+    border-width: 6px !important;
+  }
+  @media (min-width: 768px) {
+    .avatar-xxl .border {
+      border-width: 4px !important;
+    }
+  }
+  .avatar-xxl .rounded {
+    border-radius: 8px !important;
+  }
+  @media (max-width: 992px) {
+    .avatar-xxl .rounded {
+      border-radius: 12px !important;
+    }
+    .user-menu.nav > li > a {
+        padding: 0 5px;
+      }
+  }
+  .avatar-xxl .avatar-title {
+    font-size: 30px;
+  }
+  @media (min-width: 768px) {
+    .avatar-xxl .avatar-title {
+      font-size: 42px;
+    }
+  }
+  .avatar-xxl.avatar-away::before, .avatar-xxl.avatar-offline::before, .avatar-xxl.avatar-online::before {
+    border-width: 4px;
+  }
+  @media (min-width: 768px) {
+    .avatar-xxl.avatar-away::before, .avatar-xxl.avatar-offline::before, .avatar-xxl.avatar-online::before {
+      border-width: 4px;
+    }
+  }
+  
+  .avatar-group .avatar + .avatar {
+    margin-left: -0.75rem;
+  }
+  .avatar-group .avatar:hover {
+    z-index: 1;
+  }
+  .avatar-group .avatar-xs + .avatar-xs {
+    margin-left: -0.40625rem;
+  }
+  .avatar-group .avatar-sm + .avatar-sm {
+    margin-left: -0.625rem;
+  }
+  .avatar-group .avatar-lg + .avatar-lg {
+    margin-left: -1rem;
+  }
+  .avatar-group .avatar-xl + .avatar-xl {
+    margin-left: -1.28125rem;
+  }
+  
+  .avatar-xs {
+    width: 1.65rem;
+    height: 1.65rem;
+  }
+
+  .user-link .user-img {
+    margin-right: 3px;
+    position: relative;
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .user-link .user-img img {
+    width: 40px;
+    height: 40px;
+    -o-object-fit: cover;
+    object-fit: cover;
+  }
+
+  .animate-circle {
+    -webkit-animation: heartbit 1s ease-out;
+    animation: heartbit 3s ease-out;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    border: 5px solid #4C40ED;
+    border-radius: 70px;
+    position: absolute;
+    left: -6px;
+    top: -6px;
+    width: 52px;
+    height: 52px;
+    z-index: -1;
+  }
+  @media (max-width: 1199.98px) {
+    .animate-circle {
+      width: 42px;
+      height: 42px;
+    }
+  }
+
+  @keyframes heartbit {
+    0% {
+      transform: scale(0);
+      opacity: 0;
+    }
+    25% {
+      transform: scale(0.1);
+      opacity: 0.1;
+    }
+    50% {
+      transform: scale(0.5);
+      opacity: 0.3;
+    }
+    75% {
+      transform: scale(0.8);
+      opacity: 0.5;
+    }
+    100% {
+      transform: scale(1);
+      opacity: 0;
+    }
+  }
+
+
+  .user-content {
+    padding-left: 8px;
+}
+
+.user-content .user-details {
+    color: #9E9E9E;
+    font-size: 12px;
+    font-weight: 400;
+}
+
+.user-content .user-name {
+    display: block;
+    color: #28283C;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.user-content {
+    padding-left: 8px;
+  }
+  .user-content .user-name {
+    display: block;
+    color: #28283C;
+    font-size: 14px;
+    font-weight: 600;
+  }
+  .user-content .user-details {
+    color: #9E9E9E;
+    font-size: 12px;
+    font-weight: 400;
+  }
+  
+  .user-menu-four .user-content {
+    padding-left: 8px;
+  }
+  .user-menu-four .user-content .user-name {
+    display: block;
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 600;
+  }
+  
+  .user-menu {
+    height: 60px;
+    align-items: center;
+  }
+  @media (max-width: 991.98px) {
+    .user-menu {
+      height: 60px;
+    }
+  }
